Correction de la section recherche pour que le formulaire occupe 100% de l'espace en version mobile

--- a/css/style_mediaqueries.css
+++ b/css/style_mediaqueries.css
@@ -132,8 +132,16 @@
         margin: 30px 0 35px;
     }
 
+    form {
+        width: 100%;
+        height: 49px;
+        display: flex;
+        max-width: 768px;
+    }
+
     input {
         padding: 0 12px;
+        max-width: 768px;
     }
 
     .span-text {
